# funny-dolphine

./: .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker_deploy.sh  init.sql  pyproject.toml  test.txt
.github/workflows/: build.yml  deploy.yml
scripts/: entrypoint.sh
src/: app.py  settings.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/endpoints/: account.py  audiobook.py  category.py  chapter.py  listening.py  login_method.py  review.py  search.py  settings.py  shelf.py  user_audiobook.py  user_chapter.py
src/core/: auth.py  errors.py  exceptions.py
src/db/: __init__.py  builder.py  decorators.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 08473aef612a_chapter_and_user_chapter.py  1347aa4629a1_default_to_server_default.py  13c471472fae_created_reviews_table.py  1dc3739ccc1d_create_salt_and_login_table.py  5f6bbb80201c_initial_revision.py  7c70c2bca38f_server_default_to_default.py  8b5afc6fb3e6_user_audiobook_added.py  c7732a70780a_shelf_table.py  e8fff70a5889_review_and_listening_tables.py  f3683fcda63d_remove_finish_time_for_now.py  (+1 more)
src/repo/: account.py  audiobook.py  base.py  category.py  chapter.py  listening.py  login_method.py  review.py  salt.py  shelf.py  user_audiobook.py  user_chapter.py  user_settings.py
src/schemas/: account.py  audiobook.py  base.py  category.py  chapter.py  listening.py  login_method.py  review.py  salt.py  user_audiobook.py  user_chapter.py  user_settings.py
src/web/: admin.py  auth.py  factory.py
tests/core/: test_auth.py
(+7 files in other folders)
